--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-property.filepath = /home/student/IdeaProjects/week1-user-display-exercise-drmiller1/logs
+property.filepath = /home/student/IdeaProjects/HikerWebsiteIndieProject/logs
 appenders = console, file, hibernate
 
 appender.console.type = Console
@@ -8,7 +8,7 @@ appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${filepath}/week1exercise.log
+appender.file.fileName=${filepath}/hikingwebsite.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
